--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "prettier": "^3.2.5",
     "sass": "^1.77.4",
     "sass-loader": "^14.2.1",
+    "source-map-loader": "^5.0.0",
     "style-loader": "^4.0.0",
+    "svg-inline-loader": "^0.8.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
+    "prompt-sync": "^4.2.0",
+    "uuid": "^9.0.1"
   }
 }
