--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack serve",
     "build": "webpack build --mode=production",
     "lint": "eslnit .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
